optimization implicit module

--- a/implicit/client-app-implicit/src/main/resources/templates/index.html
+++ b/implicit/client-app-implicit/src/main/resources/templates/index.html
@@ -6,9 +6,8 @@
     <script src="/jquery-3.5.0.min.js"></script>
 </head>
 <body>
-你好
-
-<a href="http://localhost:8080/oauth/authorize?client_id=javaboy&response_type=token&scope=all&redirect_uri=http://localhost:8082/index.html">第三方登录（简化模式）</a>
+hi,there
+<a href="http://localhost:8080/oauth/authorize?client_id=xmxe&response_type=token&scope=all&redirect_uri=http://localhost:8082/index.html">第三方登录（简化模式）</a>
 
 <div id="div1"></div>
 <script>
