optimization authorization_code_redis module

--- a/authorization_code_redis/client-app-redis/src/main/resources/templates/index.html
+++ b/authorization_code_redis/client-app-redis/src/main/resources/templates/index.html
@@ -5,9 +5,8 @@
     <title>title</title>
 </head>
 <body>
-你好
-
-<a href="http://localhost:8080/oauth/authorize?client_id=javaboy&response_type=code&scope=all&redirect_uri=http://localhost:8082/index.html">第三方登录</a>
+hi,there
+<a href="http://localhost:8080/oauth/authorize?client_id=xmxe&response_type=code&scope=all&redirect_uri=http://localhost:8082/index.html">第三方登录(redis存储)</a>
 
 <h1 th:text="${msg}"></h1>
 </body>
